tests/pass/ZeroFillRightBitShiftAssign.java
package pass;

public class ZeroFillRightBitShiftAssign {
  public int zerofillrightbitshiftassign(int x, int y) {
    return x; // return x >>>= y;
  }
}
