tests/fail/ZeroFillRightBitShiftAssign.java
package fail;

import java.lang.System;

public class ZeroFillRightBitShiftAssign {

  public static void main(String[] args ) {
    int x = 4;
    x >>>= "hi";
  }

}
